# neural-network-experiment

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: Layer.hpp  Matrix.hpp  NeuralNetwork.hpp  Neuron.hpp
include/utils/: MultiplyMatrix.hpp
src/: Layer.cpp  Matrix.cpp  NeuralNetwork.cpp  Neuron.cpp  main.cpp  test_nn.cpp
src/utils/: MultiplyMatrix.cpp
